# haskell-teamspeak-api-v3

./: teamspeak-api-v3.cabal
src/: Lib.hs
