name:                teamspeak-api-v3
version:             0.1.0.0
synopsis:            A Haskell API for Teamspeak3 servers using Server Query
description:         A Haskell API for Teamspeak3 servers using Server Query
homepage:            http://github.com/muhbaasu/haskell-teamspeak-api-v3
license:             BSD3
license-file:        LICENSE
author:              Samuel Schuhmacher
maintainer:          github@muhbaasu.de
copyright:           2016 Samuel Schuhmacher
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , pipes
                     , pipes-network
                     , text
                     , transformers

  default-language:    Haskell2010

executable teamspeak-api-v3-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , teamspeak-api-v3
  default-language:    Haskell2010

test-suite teamspeak-api-v3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , teamspeak-api-v3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/muhbaasu/haskell-teamspeak-api-v3
